--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -96,6 +96,7 @@
         .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
 
         }
+        // comment
 
         function pickComputerMove() {
             const randomNumber = Math.random();
